<resources>
    <string name="app_name">FriendField</string>
    <string name="default_notification_channel_id">FriendField</string>
    <string name="chatlook">Chatlook</string>
    <string name="google_maps_key">AIzaSyBtnrzIQpD4MqzvmkeaQdbGUngVZ8YNpwQ</string>
    <string name="welcome_txt">Welcome!</string>
    <string name="enter_phone_txt">Enter Your Phone Number</string>
    <string name="login_des">A 4 digit OTP will be sent via SMS to verify your mobile number!</string>
    <string name="continue_btn">Continue</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="verify_number">Verify Your Phone Number</string>
    <string name="enter_otp_des">Enter the OTP you received to</string>
    <string name="please_enter_mno">Please enter valid mobile number</string>
    <string name="please_enter_mno_error">Please enter your mobile number</string>
    <string name="not_received_otp">Didn’t you receive any code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="otp_time">00:00</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="hiiiii">Hi,</string>
    <string name="name">Hunter Bryan</string>
    <string name="user_name">+91 523 4589 764</string>
    <string name="tab_chat">Chats</string>
    <string name="tab_find_friend">Friends</string>
    <string name="tab_status">STATUS</string>
    <string name="tab_calls">Calls</string>
    <string name="search">Search</string>
    <string name="tab_contact_list">Contacts</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="dis_txt">Lorern Ipsum is simply dummy text of the printing and typesetting industy</string>
    <string name="marketing">Marketing</string>
    <string name="call_time">Today, 09:30</string>
    <string name="requests">Requests</string>
    <string name="new_brodcas">New Brodcast</string>
    <string name="new_group">New Group</string>
    <string name="create_personal_profile">Create Personal Profile</string>
    <string name="create_profile">Create Your Profile</string>
    <string name="create_profile_des">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="skip_now">Skip Now</string>
    <string name="full_name">Full Name</string>
    <string name="nick_name">Nickname</string>
    <string name="email_id">Email id</string>
    <string name="location">Location</string>
    <string name="intrested_area_range">Interested Area Range</string>
    <string name="km">KM</string>
    <string name="age">Age</string>
    <string name="intrested_i">Interested in</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="other">Other</string>
    <string name="hide">HIDE</string>
    <string name="social_media_link">Add Your Social Media Links</string>
    <string name="enter_fb_link">Enter Facebook Link</string>
    <string name="enter_insta_link">Enter Instagram Link</string>
    <string name="enter_tw_link">Enter Twitter Link</string>
    <string name="enter_ld_link">Enter Linkedin Link</string>
    <string name="enter_pt_link">Enter Pintrest Link</string>
    <string name="enter_yt_link">Enter Youtube Link</string>
    <string name="enter_area_range">Enter Area Range</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_nickname">Enter Nickname</string>
    <string name="enter_emailid">Enter EmailId</string>
    <string name="data_add_successfully">Data Add Successfully</string>
    <string name="save_and_create_business_profile">SAVE AND CREATE BUSINESS PROFILE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="aboutUs">About Us</string>
    <string name="enter_hobbies">Enter Your Hobbies</string>
    <string name="enter_aboutUs">Enter Your AboutUs</string>
    <string name="hobbies">Hobbies</string>
    <string name="music">Music</string>
    <string name="cricket">Cricket</string>
    <string name="travelling">Travelling</string>
    <string name="authorized_permission">Authorized Permission</string>
    <string name="create_business_profile">Create Business Profile</string>
    <string name="business_name">Business Name</string>
    <string name="business_address">Business Address</string>
    <string name="category">Category</string>
    <string name="business_subcategory">Business Subcategory</string>
    <string name="descirition">Description</string>
    <string name="google_map">Google Map</string>
    <string name="interested_business_category">Interested Business Category</string>
    <string name="interested_business_subcategory">Interested Business Subcategory</string>
    <string name="view_brochure">View Brochure</string>
    <string name="business_brochure">Business Brochure</string>
    <string name="next">Next</string>
    <string name="business_lo">Business location</string>
    <string name="something_want_to_wrong">Something want to wrong</string>
    <string name="please_enter_bname">Please enter business name</string>
    <string name="please_enter_b_cat">Please enter business category</string>
    <string name="please_enter_b_subcat">Please enter business subCategory</string>
    <string name="please_enter_b_des">Please enter business descriptions</string>
    <string name="please_enter_b_location">Please select location</string>
    <string name="edit_business_profile">Edit Business Profile</string>
    <string name="upload_brochure">Upload Brochure</string>
    <string name="caroline_case">Caroline Case</string>
    <string name="caroline">Caroline</string>
    <string name="edit_personal_profile">Edit Personal Profile</string>
    <string name="tab_personal_info">Personal Info</string>
    <string name="tab_business_info">Business Info</string>
    <string name="tab_my_reels">My Reels</string>
    <string name="phone_number">Phone Number</string>
    <string name="number">852 1235 456</string>
    <string name="ph_number">+91 8888 555 999</string>
    <string name="email">Email</string>
    <string name="countycode">+91</string>
    <string name="mail">hello@gmail.com</string>
    <string name="location_add">4100 Pearcy Avenue Logansport, IN 46947</string>
    <string name="intrested_age_range">Interested Age Range</string>
    <string name="app_lock_wi">App-lock with face ID /\nfingerprint</string>
    <string name="subcategory">Subcategory</string>
    <string name="discription">Description</string>
    <string name="create">CREATE</string>
    <string name="products">Products</string>
    <string name="monginis_ca">Monginis Cake Shop</string>
    <string name="there_are_m">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</string>
    <string name="add_new_pro">Add New Products</string>
    <string name="add_product">Add Product</string>
    <string name="skip_for_no">Skip for Now</string>
    <string name="add_image">Add Image</string>
    <string name="product_nam">Product Name</string>
    <string name="product_pri">Product Price</string>
    <string name="product_des">Product Description</string>
    <string name="offers">Offers</string>
    <string name="product_cod">Product Code</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="please_enter_pro_name">Please enter product name</string>
    <string name="please_enter_pro_price">Please enter product price</string>
    <string name="please_enter_pro_des">Please enter product description</string>
    <string name="please_enter_pro_offer">Please enter product offer</string>
    <string name="please_enter_pro_pcode">Please enter product code</string>
    <string name="cup_cake">Cup Cake</string>
    <string name="there_are_des">There are many variations to have...</string>
    <string name="off">20% Off</string>
    <string name="some_id">$50.00</string>
    <string name="itemcode">#4563215</string>
    <string name="product_det">Product Details</string>
    <string name="price_50_00">Price:</string>
    <string name="there_des">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary,</string>
    <string name="item_code">Item Code:</string>
    <string name="delete_prod">Delete product</string>
    <string name="are_you_sur">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit_product">Edit Product</string>
    <string name="inquiry_mes">inquiry message</string>
    <string name="notification">Notification</string>
    <string name="advertisement">Advertisement</string>
    <string name="time">03:25</string>
    <string name="filter_opti">Filter Option</string>
    <string name="contact_fri">Contact Friend</string>
    <string name="app_friend">App Friend</string>
    <string name="receiver_fr">Receiver Friend</string>
    <string name="sender_frie">Sender Friend</string>
    <string name="apply">Apply</string>
    <string name="invite">invite</string>
    <string name="setting">Settings</string>
    <string name="clear_all_chats">Clear All Chats</string>
    <string name="notifications">Notifications</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="chat_backup">Chat Backup</string>
    <string name="change_number">Change Number</string>
    <string name="conatact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="conversation">Conversation</string>
    <string name="sign_out">Sign Out</string>
    <string name="clear">CLEAR</string>
    <string name="unblock">UNBLOCK</string>
    <string name="ch_number_dis">Changing your phone number, There are many variations of passages of Lorem Ipsum.</string>
    <string name="ch_number_dis1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</string>
    <string name="typing_here">Typing here...</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="reject">Reject</string>
    <string name="reject_request">Reject Request</string>
    <string name="reject_alert_txt">Are you sure you want to reject this request?</string>
    <string name="block">BLOCK</string>
    <string name="basic">Basic</string>
    <string name="plan_Detail">Plan Details</string>
    <string name="buy_plan_now">BUY PLAN NOW</string>
    <string name="dollar_150">$150</string>
    <string name="plan_description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</string>
    <string name="plan_text">There are many variations of passages.</string>
</resources>