<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="@dimen/sp_60"
            android:layout_height="@dimen/sp_5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/ic_dialog_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/filter_opti"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <CheckBox
                android:id="@+id/check_contact_fnd"
                style="@style/CustomCheckbox02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginBottom="@dimen/margin_10"
                android:drawablePadding="@dimen/margin_15"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/contact_fri"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_14" />

            <CheckBox
                android:id="@+id/check_app_fnd"
                style="@style/CustomCheckbox02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/app_friend"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_14" />

            <CheckBox
                android:id="@+id/check_receiver_fnd"
                style="@style/CustomCheckbox02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/receiver_fr"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_14" />

            <CheckBox
                android:id="@+id/check_sender_fnd"
                style="@style/CustomCheckbox02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sender_frie"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_14" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40"
                    android:layout_marginRight="@dimen/margin_13"
                    android:layout_weight="1"
                    android:background="@drawable/grey_rectangle_bg"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/cancel"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/sp_14" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_apply"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40"
                    android:layout_marginLeft="@dimen/margin_13"
                    android:layout_weight="1"
                    android:background="@drawable/edt_bg"
                    android:backgroundTint="@color/darkturquoise"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/apply"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>