<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/sp_10"
    android:background="@drawable/dialog_bg">

    <ImageView
        android:id="@+id/dialog_close"
        android:layout_width="@dimen/sp_25"
        android:layout_height="@dimen/sp_25"
        android:padding="5dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_close_20" />

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="@dimen/sp_70"
        android:layout_height="@dimen/sp_70"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@drawable/reject_close_icon" />

    <LinearLayout
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_close"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/reject_request"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20" />

        <TextView
            android:id="@+id/txt_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_reject"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sp_10"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/reject_alert_txt"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_40"
            android:layout_below="@+id/txt_dis"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/edt_bg"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/reject"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_permanent_reject"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_40"
            android:layout_below="@+id/button_reject"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/red_btn_boder"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/block"
            android:textColor="@color/red"
            android:textSize="@dimen/text_14" />
    </LinearLayout>
</RelativeLayout>