<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:padding="@dimen/margin_10">

    <TextView
        android:id="@+id/map_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14" />

    <FrameLayout
        android:id="@+id/fm"
        android:layout_width="@dimen/sp_180"
        android:layout_height="@dimen/sp_60"
        android:layout_below="@+id/map_username"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edt_bg">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_txt_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/margin_10"
            android:textColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sp_35"
                android:background="@null"
                android:hint="@string/typing_here"
                android:maxLength="100"
                android:paddingLeft="@dimen/margin_10"
                android:singleLine="true"
                android:textColor="@color/darkturquoise"
                android:textSize="@dimen/text_12" />

        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/map_send"
        android:layout_width="@dimen/sp_180"
        android:layout_height="@dimen/sp_30"
        android:layout_below="@+id/fm"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/edt_bg"
        android:backgroundTint="@color/darkturquoise"
        android:text="@string/send_request"
        android:textColor="@color/white"
        android:textSize="@dimen/text_12" />


</RelativeLayout>