<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="1.5dp"
    android:layout_marginLeft="@dimen/margin_10"
    android:layout_marginTop="@dimen/margin_10"
    android:layout_marginRight="@dimen/margin_10"
    android:layout_marginBottom="@dimen/margin_10"
    app:cardCornerRadius="@dimen/dp5">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            android:layout_width="@dimen/dp180"
            android:layout_height="@dimen/dp180"
            app:cardCornerRadius="@dimen/sp_5">

            <ImageView
                android:id="@+id/iv_pro_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/headpone" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/lin_icon"
            android:padding="@dimen/margin_5"
            android:layout_toRightOf="@id/card_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_pro_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:singleLine="true"
                android:text="@string/cup_cake"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/txt_pro_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:text="@string/there_are_des"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/txt_pro_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:text="@string/some_id"
                android:textColor="@color/darkturquoise"
                android:textSize="@dimen/text_14" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>