<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/sp_372"
    android:background="@drawable/bottom_dialog_bg"
    android:orientation="vertical">

    <View
        android:id="@+id/v1"
        android:layout_width="@dimen/sp_60"
        android:layout_height="@dimen/sp_5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/edt_bg"
        android:backgroundTint="@color/bg_grey" />

    <TextView
        android:id="@+id/txt_basic_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v1"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_20"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/basic"
        android:textColor="@color/black"
        android:textSize="@dimen/text_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v1"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_toRightOf="@+id/txt_basic_plan"
        android:layout_marginTop="@dimen/margin_20"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/plan_Detail"
        android:textColor="@color/black"
        android:textSize="@dimen/text_20" />

    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v1"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_25"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/dollar_150"
        android:textColor="@color/darkturquoise"
        android:textSize="@dimen/text_20" />

    <LinearLayout
        android:id="@+id/ll_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_basic_plan"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginRight="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/plan_description"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_plan"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginRight="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/sp_5"
                android:src="@drawable/ic_plan_dot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/plan_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_7"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/sp_5"
                android:src="@drawable/ic_plan_dot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/plan_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_7"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/sp_5"
                android:src="@drawable/ic_plan_dot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/plan_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_7"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/sp_5"
                android:src="@drawable/ic_plan_dot" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/plan_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_14" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_50"
        android:layout_below="@+id/ll_point"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edt_bg"
        android:backgroundTint="@color/darkturquoise"
        android:text="@string/buy_plan_now"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/margin_25"
        android:textSize="@dimen/sp_16" />


</RelativeLayout>